# easy-whisperx

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: osv-scanner.yml  pylint.yml  python-app.yml  python-package.yml  python-publish.yml
src/easy_whisperx/: __init__.py  aligner.py  base_model.py  diarizer.py  performance.py  pipeline.py  pool.py  result.py  steps.py  transcriber.py  utils.py
tests/: __init__.py  conftest.py  test_aligner.py  test_basic.py  test_diarizer.py  test_integration.py  test_performance.py  test_pipeline.py  test_transcriber.py  test_utils.py
