[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-whisperx"
version = "0.1.0"
description = "A Python package for easy transcription using WhisperX."
authors = [
    {name = "Aryan Falahtpisheh", email = "aryanfalahat@gmail.com"},
]
readme = "README.md"
license = { text = "BSD-2-Clause" }
keywords = ["whisperx", "transcription", "audio", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "torch",
    "pydub",
    "pandas",
    "whisperx>=3.8.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "coverage"
]
notebook = [
    "jupyter>=1.0.0",
    "pandas",
    "matplotlib",
]


[project.urls]
Homepage = "https://github.com/falahat/easy-whisperx"
Repository = "https://github.com/falahat/easy-whisperx.git"
Issues = "https://github.com/falahat/easy-whisperx/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src/easy_whisperx"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true

# Upstream whisperx ships inline type annotations but no py.typed marker, so
# mypy ignores them by default. Follow the source to use those types directly.
# (pyright/Pylance already do this via useLibraryCodeForTypes=true.)
[[tool.mypy.overrides]]
module = "whisperx.*"
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# Pylint runs at full strictness (the CI gate). There are NO inline
# `# pylint: disable` comments; the two design thresholds below are raised from
# pylint's conservative defaults to fit deliberate, reviewed shapes.
[tool.pylint.design]
# The model constructors (Transcriber/Aligner/Diarizer) and the `transcribe` entry
# point take cohesive keyword-only config — a handful more than the default of 5.
max-args = 7
# Single-responsibility helpers and single-test-method classes are legitimate.
min-public-methods = 1
